@@ -3,6 +3,7 @@
 ## New 
 
 - added `rotateZ-90` et `rotateZ-270` helpers
+- added Sass variables for `max-width` in percentages
 
 
 # [1.6.16] - 2019-06-19
